# bazel-terraform-rules

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  go.mod  go.sum
.circleci/: config.yml
.github/workflows/: blank.yml  ci.yml
examples/constants/: BUILD  main.tf
modules/constants/: BUILD  outputs.tf
modules/consumer/: BUILD  main.tf
test/constants/: BUILD.bazel  constants_test.go
test/utils/: BUILD.bazel  terraform_finder.go
tools/: def.bzl  toolchains.bzl
tools/internal/fmtcheck/: BUILD  fmtcheck.go
tools/internal/linter/: BUILD  linter.go
tools/internal/packager/: BUILD  packager.go
tools/rules/: BUILD  fmtcheck.bzl  lint.bzl  module.bzl  publisher.bzl  tflint-config.hcl
tools/toolchains/terraform/: BUILD.toolchain  toolchain.bzl
tools/toolchains/tflint/: BUILD.toolchain  toolchain.bzl
